# cross_machine_runtime

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  SCOPE.md  default.profraw  original_prompts.txt  vcpkg.json
compiler/: CMakeLists.txt  DESIGN.md  README.md
compiler/affine_lower/: AffinePass.cpp  AffinePass.h  CMakeLists.txt  README.md
compiler/aot/: AotCompiler.cpp  AotCompiler.h  CMakeLists.txt  README.md  aotc_main.cpp
compiler/cost_model/: CMakeLists.txt  CostModel.cpp  CostModel.h  README.md  cost_model_bench.cpp
compiler/dialect/: CMakeLists.txt  README.md  RuntimeDialect.cpp  RuntimeDialect.h  RuntimeDialect.td  RuntimeOps.td  RuntimeTypes.td
compiler/fusion/: CMakeLists.txt  FusionPass.cpp  FusionPass.h  README.md
compiler/fuzzing/: CMakeLists.txt  README.md  ir_fuzz.cpp
compiler/kernel_spec/: CMakeLists.txt  KernelSpecPass.cpp  KernelSpecPass.h  README.md
compiler/mem_planning/: CMakeLists.txt  MemPlanningPass.cpp  MemPlanningPass.h  README.md
compiler/mlir_setup/: CMakeLists.txt  README.md  build_llvm.sh
compiler/placement/: CMakeLists.txt  PlacementPass.cpp  PlacementPass.h  README.md
compiler/remat/: CMakeLists.txt  README.md  RematPass.cpp  RematPass.h
compiler/shape_inference/: CMakeLists.txt  README.md  ShapeInferencePass.cpp  ShapeInferencePass.h
compiler/sharding/: CMakeLists.txt  README.md  ShardingPass.cpp  ShardingPass.h
compiler/upstream/: CMakeLists.txt  README.md
cpu_engine/bench/: CMakeLists.txt  affinity_bench.cpp  avx512_bench.cpp  branchless_bench.cpp  hugepage_bench.cpp  jitter_bench.cpp  mlp_bench.cpp  nt_store_bench.cpp  perf_counters_bench.cpp  prefetch_bench.cpp  roofline_bench.cpp  tiling_bench.cpp
cpu_engine/busy_poll/: CMakeLists.txt  README.md  latency_bench.cpp
cpu_engine/pgo/: CMakeLists.txt  README.md  pgo_measure.cpp  pgo_train.cpp  run_pgo.sh
cpu_engine/test/: CMakeLists.txt  affinity_test.cpp  avx512_test.cpp  branchless_test.cpp  hugepage_test.cpp  mlp_test.cpp  nt_store_test.cpp  prefetch_test.cpp  tiling_test.cpp
distributed_training/: CMakeLists.txt  README.md
distributed_training/autograd/: CMakeLists.txt  README.md  autograd.h  autograd_test.cpp  matrix.h  mlp.h
distributed_training/checkpoint/: CMakeLists.txt  README.md  checkpoint_test.cpp  sharded_checkpoint.h
distributed_training/col_row_linear/: CMakeLists.txt  README.md  tensor_parallel_linear.h  tensor_parallel_linear_test.cpp
distributed_training/compute_comm_overlap/: CMakeLists.txt  README.md  overlap_backward.h  overlap_test.cpp
distributed_training/data_loading/: CMakeLists.txt  README.md  data_loader.cpp  data_loader.h  data_loader_test.cpp  prefetch_queue.h  webdataset_shard.cpp  webdataset_shard.h
distributed_training/data_parallel/: CMakeLists.txt  README.md  data_parallel_test.cpp  linreg.h
distributed_training/dpo/: CMakeLists.txt  README.md  dpo.h  dpo_test.cpp
distributed_training/full_training_loop/: CMakeLists.txt  README.md  training_loop_test.cpp
distributed_training/gpudirect_storage/: CMakeLists.txt  README.md  gds_bench.cu  gds_reader.h
distributed_training/grad_accum/: CMakeLists.txt  README.md  grad_accum.h  grad_accum_test.cpp
distributed_training/grad_clipping/: CMakeLists.txt  README.md  grad_clipping.h  grad_clipping_test.cpp
distributed_training/moe/: CMakeLists.txt  README.md  moe_dispatch.h  moe_layer.h  moe_test.cpp
distributed_training/parallel_3d/: CMakeLists.txt  README.md  parallel_3d_test.cpp  process_grid.h
distributed_training/pipeline_1f1b/: CMakeLists.txt  README.md  pipeline.h  pipeline_1f1b_test.cpp  pipeline_schedule.h
distributed_training/ppo_rlhf/: CMakeLists.txt  README.md  ppo.h  ppo_rlhf.h  ppo_rlhf_test.cpp
distributed_training/reward_model/: CMakeLists.txt  README.md  reward_model.h  reward_model_test.cpp
distributed_training/seq_parallel/: CMakeLists.txt  README.md  layernorm.h  seq_parallel_test.cpp
distributed_training/sft/: CMakeLists.txt  README.md  sft_test.cpp  sft_trainer.h
distributed_training/sparsity_training/: CMakeLists.txt  README.md  sparsity_2_4.h  sparsity_training_test.cpp
distributed_training/sync_batchnorm/: CMakeLists.txt  README.md  sync_batchnorm.h  sync_batchnorm_test.cpp
distributed_training/tensor_parallel_attn/: CMakeLists.txt  README.md  attention.h  attention_test.cpp
distributed_training/zero1/: CMakeLists.txt  README.md  adam.h  zero1_optimizer.h  zero1_test.cpp  zero_optimizer.h
distributed_training/zero2/: CMakeLists.txt  README.md  zero2_optimizer.h  zero2_test.cpp
distributed_training/zero3/: CMakeLists.txt  README.md  zero3_optimizer.h  zero3_test.cpp
distributed_training/zero_infinity/: CMakeLists.txt  README.md  offload_scheduler.h  offload_scheduler_test.cpp
fpga_engine/: CMakeLists.txt  README.md
fpga_engine/axi_stream/: CMakeLists.txt  README.md  axi_passthrough.cpp
fpga_engine/bram_uram/: CMakeLists.txt  README.md  bram_uram.cpp
fpga_engine/clock_gating/: CMakeLists.txt  README.md  clock_gating_model.cpp  gated_mlp.cpp  power_delta.py  power_gating.tcl
fpga_engine/cocotb/: CMakeLists.txt  Makefile  README.md  axi_stream_passthrough.v  dma_controller.v  test_axi.py  test_dma.py
fpga_engine/ddr4/: CMakeLists.txt  README.md  ddr4.cfg  ddr4_bandwidth.cpp
fpga_engine/dma/: CMakeLists.txt  README.md  dma_orchestration.cpp
fpga_engine/dot_product/: CMakeLists.txt  README.md  dot_product.cpp
fpga_engine/dsp_lut/: CMakeLists.txt  README.md  dsp_lut.cpp
fpga_engine/f1_setup/: CMakeLists.txt  README.md  setup_f1.sh
fpga_engine/fixed_point/: CMakeLists.txt  README.md  fixed_point_matmul.cpp
fpga_engine/fpga_net/: CMakeLists.txt  README.md  net_latency_model.cpp  onic_shell_integration.tcl  rdma_bypass.p4
fpga_engine/ila_debug/: CMakeLists.txt  (+3 more)
gpu_engine/: CMakeLists.txt  DESIGN.md
inference_serving/: CMakeLists.txt  README.md
ml/: CMakeLists.txt  README.md
networking/: CMakeLists.txt  DESIGN.md  README.md
observability/: CMakeLists.txt  README.md
transformer/: CMakeLists.txt  README.md  char_tokenizer.h  transformer_model.h  transformer_test.cpp
(+434 files in other folders)
