add_executable(affinity_test affinity_test.cpp)
target_include_directories(affinity_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_compile_features(affinity_test PRIVATE cxx_std_23)
set_project_warnings(affinity_test)
add_test(NAME affinity_test COMMAND affinity_test)

if(UNIX AND NOT APPLE)
    target_link_libraries(affinity_test PRIVATE pthread)
endif()

add_executable(hugepage_test hugepage_test.cpp)
target_include_directories(hugepage_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_compile_features(hugepage_test PRIVATE cxx_std_23)
set_project_warnings(hugepage_test)
add_test(NAME hugepage_test COMMAND hugepage_test)

add_executable(avx512_test avx512_test.cpp)
target_include_directories(avx512_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_compile_features(avx512_test PRIVATE cxx_std_23)
set_project_warnings(avx512_test)
if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64")
    target_compile_options(avx512_test PRIVATE -mavx2)
    if(RUNTIME_AVX512)
        target_compile_options(avx512_test PRIVATE -mavx512f -mavx512bw -mavx512vl -mavx512dq)
    endif()
endif()
add_test(NAME avx512_test COMMAND avx512_test)

add_executable(branchless_test branchless_test.cpp)
target_include_directories(branchless_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_compile_features(branchless_test PRIVATE cxx_std_23)
set_project_warnings(branchless_test)
add_test(NAME branchless_test COMMAND branchless_test)

add_executable(prefetch_test prefetch_test.cpp)
target_include_directories(prefetch_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_compile_features(prefetch_test PRIVATE cxx_std_23)
set_project_warnings(prefetch_test)
add_test(NAME prefetch_test COMMAND prefetch_test)

add_executable(nt_store_test nt_store_test.cpp)
target_include_directories(nt_store_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_compile_features(nt_store_test PRIVATE cxx_std_23)
set_project_warnings(nt_store_test)
if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64")
    target_compile_options(nt_store_test PRIVATE -mavx2)
endif()
add_test(NAME nt_store_test COMMAND nt_store_test)

add_executable(tiling_test tiling_test.cpp)
target_include_directories(tiling_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_compile_features(tiling_test PRIVATE cxx_std_23)
set_project_warnings(tiling_test)
if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64")
    target_compile_options(tiling_test PRIVATE -mavx2)
endif()
add_test(NAME tiling_test COMMAND tiling_test)

add_executable(mlp_test mlp_test.cpp)
target_include_directories(mlp_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_compile_features(mlp_test PRIVATE cxx_std_23)
set_project_warnings(mlp_test)
if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64")
    target_compile_options(mlp_test PRIVATE -mavx2)
    if(RUNTIME_AVX512)
        target_compile_options(mlp_test PRIVATE -mavx512f -mavx512bw -mavx512vl -mavx512dq)
    endif()
endif()
add_test(NAME mlp_test COMMAND mlp_test)
